--- a/DisponibilizadorDadosRotaLogAgilus/DisponibilizadorDadosRotaLogAgilus.csproj
+++ b/DisponibilizadorDadosRotaLogAgilus/DisponibilizadorDadosRotaLogAgilus.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Models\Criptografia.cs" />
     <Compile Include="Models\Documento.cs" />
     <Compile Include="Models\DocumentoRetornoRotaLog.cs" />
+    <Compile Include="Models\ObservacaoColeta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\RotaLog\Reference.cs">
       <AutoGen>True</AutoGen>
