Separação do serviço de download (rotalog)

--- a/DisponibilizadorDadosRotaLogAgilus/Web.config
+++ b/DisponibilizadorDadosRotaLogAgilus/Web.config
@@ -47,13 +47,7 @@
     </assemblyBinding>
   </runtime>
   <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="WebServiceRotaSoap" />
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="http://177.153.4.163/SistemaRotaLog/WebServiceRota.asmx" binding="basicHttpBinding" bindingConfiguration="WebServiceRotaSoap" contract="RotaLog.WebServiceRotaSoap" name="WebServiceRotaSoap" />
-    </client>
+    <bindings />
+    <client />
   </system.serviceModel>
 </configuration>
