--- a/DisponibilizadorDadosRotaLogAgilus/Web.Debug.config
+++ b/DisponibilizadorDadosRotaLogAgilus/Web.Debug.config
@@ -7,14 +7,13 @@
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
     finds an attribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
   -->
-  <system.web>
+
+    <connectionStrings xdt:Transform="Replace">
+      <add name="Dbagilus"
+        connectionString="Data Source=189.111.254.13,10000;Initial Catalog=dbAgilusDEV;User ID=suporte_agilus;Password=@gilus2016"/>
+    </connectionStrings>
+    <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your web.config file.
