--- a/DisponibilizadorDadosRotaLogAgilus/Web.config
+++ b/DisponibilizadorDadosRotaLogAgilus/Web.config
@@ -10,6 +10,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+  <add name="Dbagilus"
+    connectionString="Data Source=;189.111.254.13,10000 Catalog=dbAgilusDEV;User ID=suporte_agilus;Password=@gilus2016"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
